# mcp-restful-adapter

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: agent_usage.py  claude_desktop_config.json
scripts/: publish.sh  start-http.sh
src/mcp_restful_adapter/: __init__.py  cli.py  logging.py  server.py  spec_converter.py  spec_fetcher.py
tests/: test_main.py  test_server.py  test_spec_converter.py  test_spec_fetcher.py
