[project]
name = "mcp-restful-adapter"
version = "0.2.0"
description = "Automatically convert RESTful APIs (Swagger 2.0 / OpenAPI 3.0) into MCP Servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "lixw"},
]
keywords = ["mcp", "openapi", "swagger", "restful", "api", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/alvinlee518/mcp-restful-adapter"
Repository = "https://github.com/alvinlee518/mcp-restful-adapter"
Issues = "https://github.com/alvinlee518/mcp-restful-adapter/issues"

[project.scripts]
mcp-restful-adapter = "mcp_restful_adapter.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "twine>=6.2.0",
]
